# mlops-finalproject

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml  samn.ipynb
assets/: data_preprocessing.py  imports.py  model_training.py
src/: requirements.txt
src/dockerfiles/: fastapi  mflow
